--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -24,6 +24,9 @@
         <ion-item nav-clear menu-close href="#/app/map">
           Floor Map
         </ion-item>
+        <ion-item nav-clear menu-close href="#/app/map-info">
+          Map Info
+        </ion-item>
         <ion-item nav-clear menu-close href="#/app/position-info">
           Position Info
         </ion-item>
